--- a/README.html
+++ b/README.html
@@ -6,7 +6,6 @@
 
 <h2>Pattern</h2>
 
-<<<<<<< HEAD
 <ul>
 <li><p>b+ =&gt; word that starts with a b</p></li>
 <li><p>+b =&gt; word that ends with a b</p></li>
@@ -19,18 +18,5 @@
 <p>there are always next steps, but I think there are two immediate problems</p>
 
 <ol>
-<li><p>ability to find words with multiple constraints</p></li>
-<li><p>optimizations, it sucks to run the program and have to wait 500ms. </p></li>
+<li>ability to find words with multiple constraints</li>
 </ol>
-=======
-<p>b+ =&gt; word that starts with a b
-+b =&gt; word that ends with a b
-t_p =&gt; word that starts with a T and ends with a B (tip, top, tap)
-t+p+ =&gt; word that starts with a T has some string of letters, then a P, then another string of letters (Technophobe, Technophile)</p>
-
-<h2>Next Steps</h2>
-
-<p>there are always next steps, but I think there are two immediate problems
-1. ability to find words with multiple constraints
-2. optimizations, it sucks to run the program and have to wait 500ms. </p>
->>>>>>> 54f08fd9bdb3f01287d60804184506db8f96e7e1
