--- a/README.html
+++ b/README.html
@@ -4,6 +4,14 @@
 1. it comes up with all the possible word combinations, given a set of letters
 2. it matches the possible word combinations against a pattern.</p>
 
+<h2>Examples</h2>
+
+<p>ruby scrabble_solver.rb bttale
+=&gt; bat, tab, battle, table</p>
+
+<p>ruby scrabble_solver.rb bttale b+
+=&gt; bat, battle</p>
+
 <h2>Pattern</h2>
 
 <ul>
