added optimization next step

--- a/README.html
+++ b/README.html
@@ -26,5 +26,6 @@
 <p>there are always next steps, but I think there are two immediate problems</p>
 
 <ol>
-<li>ability to find words with multiple constraints</li>
+<li><p>ability to find words with multiple constraints</p></li>
+<li><p>the program takes about half a second to run (500ms). This is too slow in practice. </p></li>
 </ol>
